--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes</h1>
             <ul>
                 <li><a href="./recipes/meatloaf.html">Meat Loaf</a></li>
+                <li><a href="./recipes/homemade-mac-and-cheese.html">Homemade Mac and Cheese</a></li>
             </ul>   
     </body>
 </html>
