Changed p tag to better describe the recipe

--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -8,7 +8,7 @@
         <h1>Meatloaf</h1>
             <img src="../images/meatloaf.png" alt="Picture of delish meatloaf">
         <h2>Meatloaf Recipe</h2>
-            <p>Per Serving: 372 calories; protein 18.2g; carbohydrates 18.5g; fat 24.7g; cholesterol 98mg; sodium 334.6mg.</p>
+            <p>This is a very easy and no fail recipe for meatloaf. It won't take long to make at all, and it's quite good!</p>
         <h3>Ingredients</h3>
             <ul>
                 <li>1 ½ pounds ground beef</li>
