--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <ul>
                 <li><a href="./recipes/meatloaf.html">Meat Loaf</a></li>
                 <li><a href="./recipes/homemade-mac-and-cheese.html">Homemade Mac and Cheese</a></li>
+                <li><a href="./recipes/best-green-bean-casserole.html">Best Green Bean Casserole</a></li>
             </ul>   
     </body>
 </html>
