--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <head>
         <title>Homepage</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./styles.css">
     </head>
-    <body>
-        <h1>Odin Recipes</h1>
+    <body id="page">
+        <h1 class="homepage-title">Odin Recipes</h1>
             <ul>
                 <li><a href="./recipes/meatloaf.html">Meat Loaf</a></li>
                 <li><a href="./recipes/homemade-mac-and-cheese.html">Homemade Mac and Cheese</a></li>
                 <li><a href="./recipes/best-green-bean-casserole.html">Best Green Bean Casserole</a></li>
-            </ul>   
+            </ul>
+        <img src="./images/odin-logo.png">   
     </body>
 </html>
