--- a/recipes/best-green-bean-casserole.html
+++ b/recipes/best-green-bean-casserole.html
@@ -3,9 +3,10 @@
     <head>
         <title>Best Green Bean Casserole</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
     </head>
-    <body>
-        <h1>Best Green Bean Casserole</h1>
+    <body id="page">
+        <h1 class="homepage-title">Best Green Bean Casserole</h1>
             <img src="../images/greenbeancass.png" alt="Picture of delish Green Bean Casserole">
         <h2>Best Green Bean Casserole Recipe</h2>
             <p>This great variation of the traditional green bean casserole is topped with French fried onions and Cheddar cheese.</p>
