added class attributes

--- a/recipes/homemade-mac-and-cheese.html
+++ b/recipes/homemade-mac-and-cheese.html
@@ -3,9 +3,10 @@
     <head>
         <title>Homemade Mac and Cheese</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
     </head>
-    <body>
-        <h1>Homemade Mac and Cheese</h1>
+    <body id="page">
+        <h1 class="homepage-title">Homemade Mac and Cheese</h1>
             <img src="../images/macncheese.png" alt="Picture of delish Mac and Cheese">
         <h2>Homemade Mac and Cheese Recipe</h2>
             <p>This is a nice rich mac and cheese. Serve with a salad for a great meatless dinner. Hope you enjoy it.</p>
