--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -3,9 +3,10 @@
     <head>
         <title>Meatloaf</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
     </head>
-    <body>
-        <h1>Meatloaf</h1>
+    <body id="page">
+        <h1 class="homepage-title">Meatloaf</h1>
             <img src="../images/meatloaf.png" alt="Picture of delish meatloaf">
         <h2>Meatloaf Recipe</h2>
             <p>This is a very easy and no fail recipe for meatloaf. It won't take long to make at all, and it's quite good!</p>
